--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="main-container">
         <div class="aside">
             <div class="logo">
-                <a href="#"><span>V</span>ac</a>
+                <a href="#"><span>G</span>D</a>
             </div>
             <div class="nav-toggler">
                 <span></span>
